# zaliznyak-rs

./: Cargo.toml  README.md  rustfmt.toml
crates/zaliznyak/: Cargo.toml
crates/zaliznyak-rs/: Cargo.toml
crates/zaliznyak-rs/src/: alphabet.rs  inflection_buf.rs  lib.rs  word_buf.rs
crates/zaliznyak-rs/src/adjective/: declension.rs  flags.rs  fmt.rs  mod.rs
crates/zaliznyak-rs/src/categories/: abbrs.rs  convert.rs  info.rs  methods.rs  mod.rs  traits.rs
crates/zaliznyak-rs/src/declension/: endings.rs  endings_tables.rs  flags.rs  fmt.rs  from_str.rs  mod.rs  stem_types.rs  vowel_alternation.rs
crates/zaliznyak-rs/src/noun/: declension.rs  fmt.rs  from_str.rs  inflected.rs  mod.rs
crates/zaliznyak-rs/src/pronoun/: declension.rs  mod.rs
crates/zaliznyak-rs/src/stress/: convert.rs  fmt.rs  from_str.rs  methods.rs  mod.rs
crates/zaliznyak-rs/src/util/: const_try.rs  const_utils.rs  display_buffer.rs  inflection_buf.rs  mod.rs  stack_buf.rs  stack_vec.rs  unsafe_buf.rs  unsafe_parser.rs
crates/zaliznyak-rs/src/word/: display.rs  from_str.rs  letter.rs  letters.rs  mod.rs  word.rs  word_buf.rs
crates/zaliznyak/src/: lib.rs
crates/zaliznyak/src/categories/: info.rs  methods.rs  mod.rs
crates/zaliznyak/src/util/: mod.rs
crates/zaliznyak/src/word/: letter.rs  mod.rs
src/stress/: mod.rs
